2017-04-12  Karl Berry  <karl@freefriends.org>

	* mapfile.c (check_fm_entry): do not try to print fm->tfm_name,
	etc., in warnings if null.
	(fm_scan_line): goto bad_line if a null tfm_name,
	even if check_fm_entry returns true.

2017-04-12  Pali Roh\'ar <pali.rohar@gmail.com>

	* ptexmac.h (set_subfont, unset_subfont, is_subfont): remove
        these duplicate macros.

2017-03-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

        * writepng.c: Fix the size of memory to allocate when writing
        SMask in write_png_rgb_alpha. Reported by David Fifield:
        http://tug.org/pipermail/pdftex/2017-March/009100.html

2017-03-18  Karl Berry  <karl@tug.org>

        * NEWS,
        * pdftex_version.h,
        * pdftex.web (pdftex_revision, pdftex_version_string):
        version [1.40.]18 for TL17.

2017-02-18  Heiko Oberdiek  <heiko.oberdiek@googlemail.com>

	* pdftex.web (substr_of_str): move earlier.
	(Write out page object): if \MediaBox was given in \pdfpageattr,
	do not output our own.
	Mail from Michael Altmann to pdftex, 9 Feb 2017 13:19:05.
	http://tug.org/pipermail/pdftex/2017-February/009097.html

2017-02-16  Karl Berry  <karl@freefriends.org>

	* regex/regex_internal.h (alloca) [!alloca]: do not try
	to #define if already #defined.
	Report from Vincent Torri on tex-live list, 7 Jul 2016 10:48:15.
	(pdftex r765)

2016-11-05  Karl Berry  <karl@tug.org>

	* pdftoepdf.cc: doc fix.

2016-07-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf.cc: Use zround(stemV->getNum()) instead of stemV->getInt()
	in epdf_create_fontdescriptor(), since the value of stemV may be real
	in general.

2016-06-12  Karl Berry  <karl@freefriends.org>
        and Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* utils.c (last_match_succeeded): new static boolean.
	(matchstrings): set it.
	(getmatch): use it, plus check for non-NULL match_string sooner,
	plus check that rm_eo >= rm_so.
	Original bug report from David Carlisle,